server/static/sass/_sign_in.scss
.fb-login-button {
  display: inline-block;
  @include border-radius(5px);
  background-color: #AEACAC;
  @include box-shadow(0 0 10px rgba(0, 0, 0, 0.2));
  @include background-image(linear-gradient(top, #5575AF, #355997));
  height: 50px;
  line-height: 49px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  text-align: center;
  opacity: 0.8;
  @include transition(all 0.2s ease-out);
  margin-bottom: 10px;

  &:hover {
    @include transition(all 0.2s ease-out);
    @include box-shadow(0 0 20px rgba(0, 0, 0, 0.4));
    opacity: 1.0;
    cursor: pointer;

    .fb-login-text {
      @include text-shadow(0 0px 10px rgba(255, 255, 255, 0.5));
    }
  }

  .fb-logo-box {
    border-radius: 5px 0 0 5px;
    @include background-image(linear-gradient(top, #3B5D9B, #29416E));
    float: left;
    height: 50px;
    width: 50px;

    .fb-logo-f {
      height: 30px;
      width: 15px;
    }
  }
  .fb-login-text {
    padding: 0 25px;
    font-weight: bold;
    font-size: 22px;
    color: white;
    text-shadow: 0 1px 0 rgba(20, 20, 20, .5);
    text-align: center;
  }
}

.fb-facepile {
  width: 350px;
  height: 51px;
  overflow: hidden;
}

#sign-in-banner-container {
  $banner-height: 80px;
  height: $banner-height;
  display: none;

  .sign-in-banner {
    display: block;
    z-index: 100;
    width: 100%;
    height: $banner-height;
    background: mix($flowBlue, white, 80%);

    .close-banner {
      display: inline-block;
      font-size: 50px;
      opacity: 1;
      opacity: 0.5;
      position: absolute;
      right: 15px;
      color: white;
      top: 86px;

      &:hover {
        cursor: pointer;
        opacity: 1.0;
      }
    }

    .message {
      font-size: 24px;
      font-weight: 300;
      display: inline-block;
      vertical-align: top;
      height: $banner-height;
      line-height: 30px;
      margin-top: 10px;
      // This is sort of a hack so that the FB button does not drop when the
      // browser window is shrunk, but rather just covers part of the text....
      position: absolute;
      color: white;
    }

    .fb-login {
      display: inline-block;
      float: right;
      margin-top: 15px;
    }

    .fb-login-button-container {
      display: inline-block;
      position: relative;
      text-align: left;

      .fb-login-button {
        opacity: 0.9;
        background: white;

        &:hover {
          opacity: 1.0;
        }

        .fb-logo-box {
          background: $facebookBlue;
        }

        .fb-login-text {
          text-shadow: none;
          color: $facebookBlue;
        }
      }
    }

    .fb-facepile {
      vertical-align: top;
      margin: -2px 0 0 10px;
    }
  }
}

.sign-in-modal {
  width: 470px;
  overflow: hidden;

  .modal-body {
    text-align: center;

    .lead {
      font-size: 20px;
      margin-bottom: 30px;
    }

    .fb-login-text{
      padding: 0 70px;
    }

    .fb-facepile {
      overflow: hidden;
      vertical-align: top;
      margin: -5px 0 0 10px;
      // This aligns it with left edge of facebook connect button
      // TODO(mack): calculate this rather than hardcoding
      left: 15px;
    }
  }
}

.email-sign-in-modal {
  .modal-footer {
    text-align: left;
  }
  .submit-msg {
    margin-bottom: 0;
    margin-top: 10px;
  }
}

